--- a/src/web_pages/index.htm
+++ b/src/web_pages/index.htm
@@ -4,17 +4,17 @@
 <div id="status">
 	<div id="loading" style="display:none">Error:<br />Connection to demo board was lost.</div>
 	<div id="display">
-	<!--<span style="float:right;font-size:9px;font-weight:normal;padding-top:8px;text-indent:0px">(click to toggle)</span>-->
+	<span style="float:right;font-size:9px;font-weight:normal;padding-top:8px;text-indent:0px">(click to toggle)</span>
 		<p>LED:<br /><span class="leds">
 		<!-- this is commented out temporarily -->
-	<!--<a id="led2" onclick="newAJAXCommand('leds.cgi?led=2');">&bull;</a>
-		<a id="led1" onclick="newAJAXCommand('leds.cgi?led=1');">&bull;</a>-->
-		<a id="led0">&bull;</a>
+	    <a id="led2" onclick="newAJAXCommand('leds.cgi?led=2');">&bull;</a>
+		<a id="led1" onclick="newAJAXCommand('leds.cgi?led=1');">&bull;</a>
+		<a id="led0" onclick="newAJAXCommand('leds.cgi?led=0');">&bull;</a>
 		</span></p>
 		<p>Buttons:<br />
 		<span id="btn2">?</span> &nbsp;
 		<span id="btn1">?</span> &nbsp;
-		<span id="btn0">?</span></p>
+		<span id="btn0">?</span> &nbsp;</p>
 		<p>Random Number: <span id="pot0" style="font-weight:normal">?</span></p>
 	</div>
 </div>
@@ -59,7 +59,7 @@ installed on your computer as part of the Harmony distribution.</p>
 </div>
 
 <script type="text/javascript">
-<!--
+
 // Parses the xmlResponse from status.xml and updates the status box
 function updateStatus(xmlData) {
 	var mainstat = document.getElementById('display').style.display;
@@ -78,7 +78,7 @@ function updateStatus(xmlData) {
 	loadstat = 'none';
 
 	// Loop over all the LEDs
-	for(i = 0; i < 1; i++) // Temporarily change 3 to 1
+	for(i = 0; i < 3; i++) // Temporarily change 3 to 1
 		document.getElementById('led' + i).style.color = (getXMLValue(xmlData, 'led' + i) == '1') ? '#090' : '#ddd';
 
 	// Loop over all the buttons
@@ -89,12 +89,12 @@ function updateStatus(xmlData) {
 	document.getElementById('pot0').innerHTML = getXMLValue(xmlData, 'pot0');
 }
 setTimeout("newAJAXCommand('status.xml', updateStatus, true)",500);
-//-->
+
 </script>
 
 <script type="text/javascript">
-<!--
+
 document.getElementById('hello').innerHTML = "~hellomsg~";
-//-->
+
 </script>
 <!--#include file="footer.htm" -->
