Setting up dual file system

--- a/src/web_pages/dynvars.htm
+++ b/src/web_pages/dynvars.htm
@@ -24,7 +24,7 @@ The string values are passed as pointers to string of characters.</p>
 <p>As an example, here is a binary representation which LEDs are on and off on the board &#40;in the current Harmony release, this part is only working on Explorer 16 board&#41;:</p>
 
 <div class="examplebox code" style="letter-spacing: 10px">
-~led(2)~ ~led(1)~ ?
+~led(2)~ ~led(1)~ ~led(0)~
 </div>
 
 <p class="exercise"><b>Exercise:</b> Try to add the last (LSB) LED to the output above.</p>
@@ -37,8 +37,8 @@ overrun.</p>
 </div>
 
 <script type="text/javascript">
-<!--
+
 document.getElementById('hello').innerHTML = "~hellomsg~";
--->
+
 </script>
 <!--#include file="footer.htm" -->
